istio-sidecar-with-argo-rollouts-and-gatewayapi-canary-deployment/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
   istio-injection: enabled
  name: traffic-router
