istio-sidecar-with-argo-rollouts-and-gatewayapi-canary-deployment/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nginx-gateway
  annotations:
    networking.istio.io/service-type: ClusterIP
     #networking.istio.io/service-type: LoadbBalancer
  namespace: traffic-router
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    #hostname: "sidecar.devopswithdky.com"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
