istio-sidecar-with-argo-rollouts-and-gatewayapi-canary-deployment/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-http-route
  namespace: traffic-router
spec:
  parentRefs:
  - name: nginx-gateway
  - group: ""
    kind: Service
    name: istio-rollout-stable
    port: 80  
  hostnames:
    - "sidecar.devopswithdky.com"
  rules:
  - matches:
    - path:
        type: Exact
        value: /
    backendRefs:
    - name: istio-rollout-canary 
      port: 80
      weight: 0
    - name: istio-rollout-stable
      port: 80
      weight: 100
